[tool.poetry]
name = "hey_jarvis"
version = "0.1.0"
description = "Interact with openAI API with voice"
authors = ["m.kaczmarek9@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
vosk = "^0.3.45"
sounddevice = "^0.4.5"
openai = "^0.25.0"
pyttsx3 = "^2.90"
rich = "^12.6.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
