[tool.poetry]
name = "hey_jarvis"
version = "0.1.0"
description = "Interact with openAI API with voice"
authors = ["Mikolaj Kaczmarek <m.kaczmarek9@gmail.com>"]
readme = "README.md"
license = "MIT License (MIT)"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = ["voice recognition", "chat", "transcription", "vosk", "openai"]
homepage = "https://github.com/mikkac/hey_jarvis"
include = ["src/hey_jarvis/config.toml"]

[tool.poetry.scripts]
hey_jarvis = "hey_jarvis.hey_jarvis:run"

[tool.poetry.dependencies]
python = "^3.8"
vosk = "^0.3.45"
sounddevice = "^0.4.5"
openai = "^0.25.0"
pyttsx3 = "^2.90"
rich = "^12.6.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.21.0"
black = "^22.12.0"
types-toml = "^0.10.8"
bumpver = "^2022.1120"
mypy = "^0.991"
pylint = "^2.15.9"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"src/hey_jarvis/__init__.py" = ["{version}"]